...
                    text = stringResource(id = R.string.uam_auto_confirm_limits),
                    modifier = Modifier.testTag("uamAutoConfirmLimits")
                )
            },
            confirmButton = {
                TextButton(
                    modifier = Modifier.testTag("uamAutoConfirmAccept"),
                    onClick = {
                        autoConfirmationVisible = false
                        onModeSelected(UamExportUiMode.AUTO.name)
                    }
                ) {
                    Text(text = stringResource(id = R.string.uam_auto_confirm_enable))
                }
            },
            dismissButton = {
                TextButton(
                    modifier = Modifier.testTag("uamAutoConfirmCancel"),
                    onClick = { autoConfirmationVisible = false }
                ) {
                    Text(text = stringResource(id = R.string.action_cancel))
                }
            }
        )
...
